// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`useAddCredentialApi should attempt an api call to add credentials: apiCall 1`] = `
[
  [
    "/api/v2/credentials/",
    {
      "name": "Lorem",
    },
  ],
]
`;

exports[`useAddCredentialApi should handle errors while attempting to add a credential: addCredentials, alert error 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "add-credential_error",
    "name": "Lorem",
    "message": "Unknown error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useAddCredentialApi should handle errors while attempting to add a credential: addCredentials, error 1`] = `
{
  "isAxiosError": true,
  "message": "Mock error",
}
`;

exports[`useAddCredentialApi should handle success while attempting to add a credential: addCredentials, success 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "add-credential"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useAddCredentialApi should process an API error response: callbackError 1`] = `
{
  "response": {
    "data": {
      "message": "Dolor sit",
    },
  },
}
`;

exports[`useAddCredentialApi should process an API error response: callbackError, alert 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "add-credential_error",
    "name": "Lorem Ipsum",
    "message": "Dolor sit"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useAddCredentialApi should process an API success response: callbackSuccess 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "add-credential",
    "name": "Lorem"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should attempt an api call to delete credentials: apiCall 1`] = `
[
  [
    "/api/v2/credentials/bulk_delete/",
    {
      "ids": [
        456,
        789,
      ],
    },
  ],
]
`;

exports[`useDeleteCredentialApi should handle errors while attempting to delete single and multiple credentials: deleteCredentials, error 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 1,
    "name": "lorem ipsum dolor sit",
    "message": "Mock error"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "lorem ipsum, dolor sit",
    "message": "Mock error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should handle success while attempting to delete single and multiple credentials: deleteCredentials, success 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential",
    "count": 1,
    "name": "lorem ipsum dolor sit"
  }
])",
      "variant": "success",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential",
    "count": 2,
    "name": "lorem ipsum, dolor sit"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should process an API error response: callbackError 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Lorem ipsum"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Dolor sit"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Amet"
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential_error",
    "count": 2,
    "name": "Lorem, Ipsum",
    "message": "Unknown error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useDeleteCredentialApi should process an API success response: callbackSuccess 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "skipped-credential",
    "name": "Lorem, Ipsum",
    "count": 2
  }
])",
      "variant": "danger",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credentials-skipped-credentials",
    "deleted_names": "Ipsum",
    "skipped_names": "Lorem",
    "count": 1
  }
])",
      "variant": "warning",
    },
  ],
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "deleted-credential",
    "count": 2,
    "name": "Lorem, Ipsum"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useEditCredentialApi should attempt an api call to edit credentials: apiCall 1`] = `
[
  [
    "/api/v2/credentials/123/",
    {
      "id": 123,
      "name": "Lorem",
    },
  ],
]
`;

exports[`useEditCredentialApi should handle errors while attempting to edit a credential: editCredentials, alert error 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "credential_edit_error",
    "name": "Lorem",
    "message": "Unknown error"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useEditCredentialApi should handle errors while attempting to edit a credential: editCredentials, error 1`] = `
{
  "isAxiosError": true,
  "message": "Mock error",
}
`;

exports[`useEditCredentialApi should handle success while attempting to edit a credential: editCredentials, success 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "credential_edit"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useEditCredentialApi should process an API error response: callbackError 1`] = `
{
  "response": {
    "data": {
      "message": "Dolor sit",
    },
  },
}
`;

exports[`useEditCredentialApi should process an API error response: callbackError, alert 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "credential_edit_error",
    "name": "Lorem Ipsum",
    "message": "Dolor sit"
  }
])",
      "variant": "danger",
    },
  ],
]
`;

exports[`useEditCredentialApi should process an API success response: callbackSuccess 1`] = `
[
  [
    {
      "title": "t([
  "toast-notifications.description",
  {
    "context": "credential_edit",
    "name": "Lorem"
  }
])",
      "variant": "success",
    },
  ],
]
`;

exports[`useGetCredentialsApi should attempt an api call to retrieve credentials: apiCall 1`] = `
[
  [
    "/api/v2/credentials/",
    {},
  ],
]
`;

exports[`useGetCredentialsApi should handle errors while attempting to retrieve credentials: getCredentials, error 1`] = `
{
  "isAxiosError": true,
  "message": "Mock error",
}
`;

exports[`useGetCredentialsApi should handle success while attempting to retrieve credentials: getCredentials, success 1`] = `{}`;

exports[`useGetCredentialsApi should process an API error response: callbackError 1`] = `
{
  "response": {
    "data": {
      "message": "Dolor sit",
    },
  },
}
`;

exports[`useGetCredentialsApi should process an API success response: callbackSuccess 1`] = `
{
  "data": {
    "results": [
      {
        "id": "1",
        "name": "Lorem",
      },
    ],
  },
}
`;
